impossible to influence the particle system #58932

Closed
opened 2018-12-07 14:01:03 +01:00 by fra are · 7 comments

System Information
Operating system: win 7 64bit
Graphics card: nvidia gtx980 + gtx780

Blender Version
Broken:
2.80 (sub 35), branch: blender2.8, commit date: 2018-12-06 00:27, hash: 74db65e542, type: Release
build date: 05/12/2018, 17:54b
Worked:
blender 2.79

Short description of error
it is impossible to influence the particle by animating the position of a texture or by animating the parameters of the influence
screenshot.4803.jpg

Exact steps for others to reproduce the error
I attached .blend file
from blender279 ok
particellare279.blend

from blender 280 broken
particellare280.blend

tnx

System Information Operating system: win 7 64bit Graphics card: nvidia gtx980 + gtx780 Blender Version Broken: 2.80 (sub 35), branch: blender2.8, commit date: 2018-12-06 00:27, hash: 74db65e5424, type: Release build date: 05/12/2018, 17:54b Worked: blender 2.79 **Short description of error** it is impossible to influence the particle by animating the position of a texture or by animating the parameters of the influence ![screenshot.4803.jpg](https://archive.blender.org/developer/F5870053/screenshot.4803.jpg) **Exact steps for others to reproduce the error** I attached .blend file from blender279 ok [particellare279.blend](https://archive.blender.org/developer/F5870080/particellare279.blend) from blender 280 broken [particellare280.blend](https://archive.blender.org/developer/F5870097/particellare280.blend) tnx
Author

Added subscriber: @FrancescoArena

Added subscriber: @FrancescoArena
Author

I managed to animate the particle system by registering a key to the mapping \ offset x. This animation is visible in 3dview but in rendering it is inanimate
fondale-01.blend

screenshot.2723.jpg

I managed to animate the particle system by registering a key to the mapping \ offset x. This animation is visible in 3dview but in rendering it is inanimate [fondale-01.blend](https://archive.blender.org/developer/F5903305/fondale-01.blend) ![screenshot.2723.jpg](https://archive.blender.org/developer/F5903316/screenshot.2723.jpg)

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-10 14:20:17 +01:00

I can reproduce this. The particle state in the viewport is animated but the render remains static. I'm guessing this is a depsgraph issue of some kind.

I can reproduce this. The particle state in the viewport is animated but the render remains static. I'm guessing this is a depsgraph issue of some kind.

This issue was referenced by f179ac9fc1

This issue was referenced by f179ac9fc163b1f94efe7079357a31beb9fcd544

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@Sergey this is still not solved for me with that commit. The particle system animates in the viewport, but the render always renders out the same result.

@Sergey this is still not solved for me with that commit. The particle system animates in the viewport, but the render always renders out the same result.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58932
No description provided.