Fix T58932: Impossible to influence the particle system